# roastcraft

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
docs/: todo.md  win_dev_setup.md
machines/: modbus.toml
machines/kapok/: 501_inlet.toml  501_inlet_rtu.toml
machines/tasi/: ta612c.toml
src/: Annotation.tsx  App.tsx  AppState.ts  AppStore.ts  AppStore.tsx  BarChart.tsx  DashboardPanel.tsx  InputChart.tsx  LinePlot.tsx  MainChart.tsx  ManualChart.tsx  NotesPanel.tsx  PhaseChart.tsx  PhaseChart2.tsx  PhaseTempChart.tsx  RangeInput.tsx  SecondaryChart.tsx  SettingsPanel.tsx  SunburstChart.tsx  ToolTip.tsx  calculate.ts  fileUtil.ts  index.css
src-tauri/: Cargo.toml  all_options.toml  kapok501.toml  roastcraft.config.toml  roastcraft.toml  roastcraft_all_options.toml  tauri.conf.json
src-tauri/src/: config.rs  devices.rs  main.rs
src-tauri/src/devices/: http.rs  modbus.rs  ta612c.rs
