# SPDX-License-Identifier: GPL-3.0-or-later

[package]
    name = "roastcraft"
    version = "0.0.1"
    description = "A Tauri App"
    authors = [
        "chihpingkuo",
    ]
    license = ""
    repository = ""
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
    tauri-build = { version = "1.5", features = [
    ] }

[dependencies]
    tauri = { version = "1.5", features = [
        "window-all",
        "dialog-all",
        "shell-open",
    ] }
    serde = { version = "1.0", features = [
        "derive",
    ] }
    serde_json = "1.0"
    tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = [
        "colored",
    ] }
    log = "^0.4"
    tokio = { version = "1.32.0", features = [
        "full",
    ] }
    tokio-modbus = "^0.9.0"
    tokio-serial = "5.4.4"
    async-trait = "0.1.73"
    toml = { version = "0.8.4", features = [
        "preserve_order",
    ] }

[features]
    # this feature is used for production builds or when `devPath` points to the filesystem
    # DO NOT REMOVE!!
    custom-protocol = [
        "tauri/custom-protocol",
    ]

# for devtools
[profile.release.package.wry]
    debug            = true
    debug-assertions = true
